--- a/about.html
+++ b/about.html
@@ -37,7 +37,7 @@
     <!-- NAVBAR -->
     <nav class="navbar navbar-expand-lg navbar-dark">
       <div class="container">
-        <a class="navbar-brand" href="#">Nugas.id</a>
+        <img class="logonavbar" src="png/logo navbar.png" href="#" alt="logo navbar" />
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -80,6 +80,10 @@
       </div>
     </section>
     <!-- ABOUT -->
+
+    <!-- COPYRIGHT -->
+    <footer class="copyright">Copyright by Nugas.id 2023 <br />Created with love by <a href="https://www.instagram.com/perdiiardiansahh/">Perdi Ardiansah</a></footer>
+    <!-- COPYRIGHT -->
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
   </body>
