--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     <!-- NAVBAR -->
     <nav class="navbar navbar-expand-lg navbar-dark">
       <div class="container">
-        <a class="navbar-brand" href="#">Nugas.id</a>
+        <img class="logonavbar" src="png/logo navbar.png" href="#" alt="logo navbar" />
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -113,6 +113,9 @@
     </section>
     <!-- ABOUT -->
 
+    <!-- COPYRIGHT -->
+    <footer class="copyright">Copyright by Nugas.id 2023 <br />Created with love by <a href="https://www.instagram.com/perdiiardiansahh/">Perdi Ardiansah</a></footer>
+    <!-- COPYRIGHT -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
   </body>
 </html>
